# proofd

src/: docker-compose.yaml
src/ac/: Dockerfile  entrypoint.sh  pyproject.toml
src/ac/alembic/: env.py
src/ac/alembic/versions/: 377fab71fcfe_added_timezont.py  463c84f92b18_endpoint_not_requested_now.py  (+1 more)
src/ac/app/: config.py  crypto.py  db.py  main.py  models.py  schemas.py  utils.py
src/cli/: pyproject.toml
src/cli/completion/: _proofd
src/cli/debian/: changelog  control  copyright  install  proofd  proofd.bash  proofd.fish
src/cli/man/: proofd-completion.1  proofd-create.1  proofd-doctor.1  proofd-format-info.1  proofd-format-upgrade.1  proofd-format.1  proofd-hash.1  proofd-init.1  proofd-inspect.1  proofd-validate.1  proofd-verifier-add.1  proofd-verifier-list.1  proofd-verifier-remove.1  proofd-verifier.1  proofd-verify.1  proofd.1
src/cli/proofd/: cli.py  config.py  crypto.py  errors.py  format.py  log_config.py  verify.py
src/vc/: pyproject.toml
src/vc/alembic/: env.py
src/vc/alembic/versions/: 401cd74ecb62_init.py  46871c3fe0c7_added_revocation_fields.py  7ba32823114b_added_confirmed_at.py
src/vc/app/: config.py  deps.py  main.py
src/vc/app/api/: deps.py
src/vc/app/api/v1/: __init__.py  challenge.py  confirm.py  health.py  private_key.py  revoke.py
src/vc/app/domain/: __init__.py  commands.py  entities.py  errors.py  events.py  policies.py  value_objects.py
src/vc/app/infra/: crypto.py  db.py  models.py  repositories.py
src/vc/app/services/: __init__.py  challenge_service.py  confirm_service.py  dto.py  revoke_service.py
(+6 files in other folders)
