[project]
name = "verification-center"
version = "0.1.0"
description = "verification center exapmle for proofd system"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "sqlmodel",
    "cryptography",
    "uvicorn",
    "alembic",
    "asyncpg",
    "psycopg2-binary"
]
